--- a/test.css
+++ b/test.css
@@ -1,4 +1,9 @@
-
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
